@@ -399,8 +399,6 @@
 												[row]
 													{_GUI_SIDE_CONTROLLER_OPTION human ( _ "controller^Human")}
 
-													{_GUI_SIDE_CONTROLLER_OPTION human_ai ( _ "controller^Human/AI")}
-
 													{_GUI_SIDE_CONTROLLER_OPTION ai ( _ "controller^AI only")}
 
 													{_GUI_SIDE_CONTROLLER_OPTION null ( _ "controller^None")}
