@@ -9,6 +9,8 @@ Version 1.11.11+dev:
  * Campaigns:
    * The Hammer of Thursagan:
      * Fixed missing objective in 'The Court of Karrag'.
+ * C++ Engine:
+   * Purge "human_ai" controller type. This is a fixup of bugfix #18829 below.
  * Language and i18n:
    * Updated translations: German, Scottish Gaelic, Slovak
  * Lua API:
